--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ version: '3.7'
 services:
 
     web:
-        build:
-            context: .
+        build: .
         image: recon-ng
         container_name: recon-ng
         ports:
