Modified the Dockerfile and docker-compose.yml files to simplify start up steps.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
             - REDIS_URL=redis://redis:6379/0
         depends_on:
             - redis
+            - web
 
     redis:
         image: redis
